@@ -1,3 +1,8 @@
+2012-05-10  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	PR c++/53301
+	* g++.dg/warn/Wzero-as-null-pointer-constant-6.C: New.
+
 2012-05-10  Eric Botcazou  <ebotcazou@adacore.com>
 
 	* gnat.dg/lto11.ad[sb]: New test.
