@@ -1,3 +1,9 @@
+2012-05-10  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	PR c++/53301
+	* decl.c (check_default_argument): Fix typo (POINTER_TYPE_P
+	instead of TYPE_PTR_P) in zero-as-null-pointer-constant warning.
+
 2012-05-03  Paolo Carlini  <paolo.carlini@oracle.com>
 
 	PR c++/53186
